syntax = "proto3";

package service.ourchat.session.accept_session.v1;

message AcceptSessionRequest {
  uint64 session_id = 1;
  // accept or reject
  bool accepted = 2;
  uint64 inviter_id = 3;
}

message AcceptSessionResponse {}
